tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-NaN-el
  namespace: my-go-app
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: NaN-el
spec:
  to:
    kind: Service
    name: el-NaN-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
